<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yuddi.omineiro.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/rest_o_mineiro"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name"
            style="@style/Head"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:adjustViewBounds="true"
                android:src="@drawable/photo1"
                android:layout_margin="2dp"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:src="@drawable/photo2"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:layout_margin="2dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:src="@drawable/photo3"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:layout_margin="2dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:src="@drawable/photo4"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:layout_margin="2dp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            style="@style/Body"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_title"
            style="@style/Subhead"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            style="@style/Body"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_title"
            style="@style/Subhead"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:autoLink="phone"
            style="@style/Body"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_operation_title"
            style="@style/Subhead"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_operation"
            style="@style/Body"
            android:layout_marginBottom="50dp"/>

    </LinearLayout>

</ScrollView>